# TikTakToe

./: .gitignore  CMakeLists.txt  README.md  build.sh
client/: build.sh  makefile
client/src/: main.cpp
res/: here
server/: makefile  server.txt
server/src/: main.cpp
src/: eventhandler.h  gameinfo.h  main.cpp  window.cpp  window.h
src/scenes/: gamescene.cpp  gamescene.h  menuscene.cpp  menuscene.h  networkscene.cpp  networkscene.h
src/scenes/ui/: animation.cpp  animation.h  button.cpp  button.h  map.cpp  map.h  textinput.cpp  textinput.h
